--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 /04_SceneGraph.png
 /Aufschrieb comp. Grafik 20.05.txt
+# Godot 4+ specific ignores
+.godot/
+.nomedia
+
+# Godot-specific ignores
+.import/
+
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
